# ARCHITETTURE-AVANZATE

CUDA/Examples/HelloWorld/: CMakeLists.txt  HelloWorld.cu  compile.sh
CUDA/Examples/VectorAdd/: CMakeLists.txt  VectorAdd.cu  VectorAdd.cu~  compile.sh  compile.sh~
CUDA/Exercises/1DStencil/: 1DStencil.cu  1DStencil.cu~  compile.sh  stencil
CUDA/Exercises/MatrixMultiplication/: MatrixMultiplication.cu  MatrixMultiplication.cu~  compile.sh  compile.sh~  (+1 more)
Esempi_MPI1/01_Ring/: compile.sh  ring  ring.cpp
Esempi_MPI1/Bd_SCA_RED/: collective  collective.cpp  compile.sh  sendreceive
Esempi_MPI1/HelloWorld/: .mpd.conf  CMakeLists.txt  HelloWorld.cpp  compile.sh  hello
Esempi_MPI1/SendReceive/: CMakeLists.txt  SendReceive.cpp  compile.sh  sendreceive
Esempi_MPI1/collective/: collective  collective.cpp
Esempi_MPI2/DerivateData/: compile.sh  derivate  derivate.cpp
Esempi_MPI2/TestDerivated/: CMakeLists.txt  TestDerivated.cpp  compileTestDerivated.sh  testderivated
Esercizi_OMP1/Factorial/: Factorial.cpp  compile.sh  factorial
Esercizi_OMP1/Find/: Find.cpp  compile.sh  find_omp
Esercizi_OMP1/MatrixMul/: compile.sh  main.cpp  matrix_mul_O3
Esercizi_OMP1/RC4/: CMakeLists.txt  RC4.cpp  RC4_p.cpp  compile.sh  main.cpp  rc4
OMP2_exercises/Fibonacci/: Fibonacci.cpp  compile.sh  fibonacci
OMP2_exercises/ProducerConsumer/: ProducerConsumer.cpp  compile.sh  producerconsumer
OMP2_exercises/QuickSort/: QuickSort.cpp  compile.sh  file.txt  gmon.out  quick  quicksort  testGrpof
SOLUION/: MatrixMultiplication_ShM.tgz  SoluzioniOMP1.tgz  SoluzioniOMP2.tgz
(+6 files in other folders)
